--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "git://github.com/kaelzhang/roe-plugin-apollo-env.git"
   },
   "keywords": [
-    "roe-plugin-apollo-env"
+    "roe-plugin-apollo-env",
+    "roe-plugin",
+    "apollo"
   ],
   "engines": {
     "node": ">= 6"
