--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roe-plugin-apollo-env",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Roe plugin to apply configurations from Ctrip's apollo config service to process.env",
   "main": "src/index.js",
   "scripts": {
@@ -31,6 +31,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kaelzhang/roe-plugin-apollo-env/issues"
+  },
+  "peerDependencies": {
+    "roe-scripts": ">= 1.2.0"
   },
   "devDependencies": {
     "ava": "^1.4.1",
