--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "https://github.com/kaelzhang/@caviar/plugin-apollo-env/issues"
   },
   "peerDependencies": {
-    "caviar": ">= 2.0.0"
+    "caviar": ">=2.0.1"
   },
   "devDependencies": {
     "ava": "^1.4.1",
@@ -46,6 +46,7 @@
   "dependencies": {
     "ctrip-apollo": "^4.0.4",
     "err-object": "^4.3.1",
-    "has-own-prop": "^1.0.1"
+    "has-own-prop": "^1.0.1",
+    "mix2": "^1.0.3"
   }
 }
