--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caviar/plugin-apollo-env",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Caviar plugin to apply configurations from Ctrip's apollo config service to process.env",
   "main": "src/index.js",
   "scripts": {
@@ -43,7 +43,6 @@
   "dependencies": {
     "ctrip-apollo": "^4.3.0",
     "err-object": "^4.3.1",
-    "has-own-prop": "^1.0.1",
-    "mix2": "^1.0.4"
+    "has-own-prop": "^1.0.1"
   }
 }
