--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caviar/ctrip-apollo-env-plugin",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Caviar plugin to apply configurations from Ctrip's apollo config service to process.env",
   "main": "src/index.js",
   "scripts": {
@@ -42,8 +42,6 @@
     "eslint": "^5.16.0"
   },
   "dependencies": {
-    "ctrip-apollo": "^4.3.0",
-    "err-object": "^4.3.1",
-    "has-own-prop": "^1.0.1"
+    "apollo-declare": "^1.0.1"
   }
 }
