--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caviar/ctrip-apollo-env-plugin",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Caviar plugin to apply configurations from Ctrip's apollo config service to process.env",
   "main": "src/index.js",
   "scripts": {
@@ -19,6 +19,7 @@
   "keywords": [
     "@caviar/ctrip-apollo-env-plugin",
     "caviar-plugin",
+    "caviar-sandbox-plugin",
     "env-plugin",
     "apollo"
   ],
@@ -34,14 +35,14 @@
     "url": "https://github.com/caviarjs/ctrip-apollo-env-plugin/issues"
   },
   "devDependencies": {
-    "ava": "^1.4.1",
-    "codecov": "^3.3.0",
-    "nyc": "^14.1.0",
+    "ava": "^2.3.0",
+    "codecov": "^3.5.0",
+    "nyc": "^14.1.1",
     "eslint-config-ostai": "^3.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint": "^5.16.0"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint": "^6.3.0"
   },
   "dependencies": {
-    "apollo-declare": "^1.0.1"
+    "apollo-declare": "^1.0.2"
   }
 }
